pandoc-fignos 2.3.1 (2020-07-31)

    * Require pandoc-xnos 2.4.2 (bug fix release).


pandoc-fignos 2.3.0 (2020-07-30)

    * Updated to work with pandoc 2.10.
    * Fixed figure number reset problem for html, docx (Issue #76).


pandoc-fignos 2.2.0 (2019-10-27)

    * Added html/epub subfigures support (Issue #50).


pandoc-fignos 2.1.2 (2019-10-27)

    * Documented LaTeX subfigures support (Issue #50).


pandoc-fignos 2.1.1 (2019-09-26)

    * Warns about duplicate reference targets.


pandoc-fignos 2.0.0 (2019-09-17)

    * A warnings system has been added.
    * Meta variable names have been updated.
    * TeX codes have been completely overhauled.
    * TeX `\label` location is left up to pandoc.
    * Html/epub figures are now enclosed in a `<div>`.
    * Epub support is generally improved.
    * Support for section number offsets in table numbers (Issue #47).
    * Support for disabling links on selected references (Issue #54).
    * Support for custom caption separators (Issue #67).
    * Better handling of missing references.
    * Changed `fignos-number-sections` and `xnos-number-sections`
      options to `fignos-number-by-section` and
      `xnos-number-by-section`

pandoc-fignos 1.4.2 (2019-05-16)

    * `pandoc-fignos --version` now gives the verson.


pandoc-fignos 1.4.1 (2019-05-16)

    * Bug fix for figure numbering by section for docx (Issue #58).


pandoc-fignos 1.4.0 (2019-05-15)

    * Support for references in bracketed spans (Issue #58).


pandoc-fignos 1.3.2 (2019-05-15)

    * Enabled figure numbering by section for docx (addresses
      Issue #59).


pandoc-fignos 1.3.1 (2019-05-08)

    * Maintenance release for pandoc 2.7.


pandoc-fignos 1.3.0 (2018-08-09)

    * Require pandoc-xnos>=1.1,<2 to ensure API compatibility
      (Issue #46).
    * Gives more helpful error message regarding acceptable
      boolean metadata values (Issue #51).
    * Removed blank line before caption in docx output
      (pandoc-tablenos Issue #6).

